# AutoStartd_Python

./: README.md  main.py  pyproject.toml  test_auto_start.py
autostartd/: __init__.py  api.py  linux.py  main.py  windows.py
autostartd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
